--- a/_images/02.md
+++ b/_images/02.md
@@ -1,4 +1,4 @@
 ---
-title: Hemlock (Mislabelled)
-caption: These achenes belong to geraniaceae family (Perhaps Erodium spp.?) 
+title: Hemlock Stork's-Bill 
+caption: Erodium cicutarium (Geraniaceae) achenes and seeds. 
 ---
