--- a/_images/02.md
+++ b/_images/02.md
@@ -1,4 +1,4 @@
 ---
 title: Hemlock Stork's-Bill 
-caption: Erodium cicutarium (Geraniaceae) achenes and seeds. 
+caption: *Erodium cicutarium* (Geraniaceae) achenes and seeds. 
 ---
