--- a/_images/02.md
+++ b/_images/02.md
@@ -1,5 +1,5 @@
 ---
-title: Hemlock Stork's-Bill 
-species: Erodium cicutarium
-caption: Erodium cicutarium (Geraniaceae) achenes and seeds. 
+title: Flax
+species: Linum usitatissimum
+caption: Fruits and seeds
 ---
