--- a/_images/02.md
+++ b/_images/02.md
@@ -1,5 +1,5 @@
 ---
-title: Flax
-species: Linum usitatissimum
-caption: Fruits and seeds
+title: Bluebell
+species: Hyacinthoides non-scripta
+caption: Seeds
 ---
