--- a/_images/04.md
+++ b/_images/04.md
@@ -1,5 +1,5 @@
 ---
-title: Hemlock Stork's-Bill 
-species: Erodium cicutarium
-caption: Achenes and seeds. 
+title: Flax
+species: Linum usitatissimum
+caption: Fruits and seeds
 ---
