--- a/_images/03.md
+++ b/_images/03.md
@@ -1,5 +1,5 @@
 ---
-title: Thorn apple
-species: Datura stramonium
-caption: Seeds
+title: Flax
+species: Linum usitatissimum
+caption: Fruits and seeds
 ---
