--- a/_images/05.md
+++ b/_images/05.md
@@ -1,5 +1,5 @@
 ---
-title: Hemlock Stork's-Bill 
-species: Erodium cicutarium
-caption: Achenes and seeds. 
+title: Thorn apple
+species: Datura stramonium
+caption: Seeds
 ---
